# goit-pythonweb-hw-08

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/versions/: 9fb629330e2f_init.py
src/conf/: config.py
src/repository/: contacts.py
